@@ -1,0 +1,25 @@
+*
+* Field definition for kb_kickstarter Field-Type: "invisible"
+*
+* Version 0.0.1 / 2010-05-24
+*
+* (c) 2010: Bernhard Kraft <kraftb@think-open.at>
+*
+*
+* 
+* All files in this folder are part of the TYPO3 project. The TYPO3
+* project is free software; you can redistribute it and/or modify
+* it under the terms of the GNU General Public License as published
+* by the Free Software Foundation; either version 2 of the License,
+* or (at your option) any later version.
+*
+* The GNU General Public License can be found at
+* http://www.gnu.org/copyleft/gpl.html.
+* 
+* This script is distributed in the hope that it will be useful,
+* but WITHOUT ANY WARRANTY; without even the implied warranty of
+* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+* GNU General Public License for more details.
+*
+* This copyright notice MUST APPEAR in all copies of the script!
+*
