@@ -1,0 +1,2 @@
+	`{$property.full_alias}` varchar({if $property.config.max}{$property.config.max}{else}20{/if}) DEFAULT '' NOT NULL,
+
