@@ -1,0 +1,4 @@
+{include file="_basics/dyn_tca_php/prop_header.tpl"}
+				'type' => 'passthrough',
+{include file="_basics/dyn_tca_php/prop_footer.tpl"}
+
