@@ -1,3 +1,8 @@
+2010-07-25  Bernhard Kraft  <kraftb@think-open.at>
+
+	* Changes to container fields, so selecting parent-field is now obligatory. If no parent field is selected a default one gets created
+	* Added the "invisible" field type (passthrough)
+
 2010-04-22  Bernhard Kraft  <kraftb@think-open.at>
 
 	* Updated copyright date to 2010
